--- a/AluraFlixREFAC.html
+++ b/AluraFlixREFAC.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="AluraFlixREFAC.css"/>
+    <script src="./AluraFlixREFAC.JS"></script>
     <title>
         Imersão Dev - Aula 06
     </title>
@@ -15,7 +16,7 @@
 <body>
     <div class="container">
         <h1 class="page-title">
-            Aluraflix
+            Aluraflix 
         </h1>
         <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg" class="page-logo"
             alt="">
